--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,7 @@
 {
+   // 作者
    "author": "LoadMonkey",
+   // 会一直常驻的后台JS或后台页面，2种指定方式，如果指定JS，那么会自动生成一个背景页"scripts": ["js/background.js"]
    "background": {
       "page": "background.html"
    },
